[tool.poetry]
name = "hll-rcon-log-analyzer"
version = "0.1.0"
description = "A tool to analyze Hell Let Loose RCON logs to identify interesting or suspicious behavior such as admin camera abuse."
authors = ["Christopher Mathey <emathey@protonmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cemathey/hll-rcon-log-analyzer"
repository = "https://github.com/cemathey/hll-rcon-log-analyzer"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.4.4"}
pytest-cov = "^3.0.0"

[tool.coverage.paths]
source = ["src",]

[tool.coverage.run]
branch = true
source = ["hll_rcon_log_analyzer"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
