[tool.poetry]
name = "hll-rcon-log-analyzer"
version = "0.1.0"
description = "A tool to analyze Hell Let Loose RCON logs to identify interesting or suspicious behavior such as admin camera abuse."
authors = ["Christopher Mathey <emathey@protonmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cemathey/hll-rcon-log-analyzer"
repository = "https://github.com/cemathey/hll-rcon-log-analyzer"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.6.1"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.4.4"}
pytest-cov = "^3.0.0"
black = "^22.6.0"
flake8 = "^5.0.4"
flake8-bandit = {git = "https://github.com/tylerwince/flake8-bandit", tag="v4.1.0"}
flake8-black = "^0.3.3"
flake8-bugbear = "^22.8.23"
flake8-import-order = "^0.18.1"
safety = "^2.1.1"

[tool.coverage.paths]
source = ["src",]

[tool.coverage.run]
branch = true
source = ["hll_rcon_log_analyzer"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
